runs/034c-min-lr-on-034/034cB-invalid/seed_314_20260423T150947Z/launch.out
  File "<stdin>", line 4
    baseline_log = Path(/workspace/runs/034-frozen-direct-carry-from-031a/seed_314/train.log)
                                        ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
